--- a/cli/pom.xml
+++ b/cli/pom.xml
@@ -28,6 +28,11 @@
             <artifactId>compiler-parser</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>hr.fer.ppj</groupId>
+            <artifactId>compiler-semantics</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
