--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,7 @@
                         <effort>Max</effort>
                         <threshold>Low</threshold>
                         <xmlOutput>true</xmlOutput>
+                        <failOnError>false</failOnError>
                     </configuration>
                 </plugin>
 
